Fixed slight page menu outline cutoff
Submenu item outline was slightly cut off on Chrome.
Also tweaked figure centring and made page fill all width on small screens.

--- a/scss/document.scss
+++ b/scss/document.scss
@@ -610,6 +610,10 @@ main {
 			}
 		}
 	}
+
+	@media (max-width: 30rem) {
+		width: 100%;
+	}
 }
 
 footer {
