--- a/scss/input.scss
+++ b/scss/input.scss
@@ -96,9 +96,9 @@
 		flex-flow: column nowrap;
 
 		height: max-content;
-		margin: -2px;
-		margin-left: calc(var(--containerPadding-fieldset) - 2px);
-		padding: 2px;
+		margin: -3px;
+		margin-left: calc(var(--containerPadding-fieldset) - 3px);
+		padding: 3px;
 
 		transition: none ease 0.4s;
 		transition-property: height;
