--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,10 @@
 	}
 }
 
+// [tabindex='0'] {
+// 	background-color: hsla(0, 50%, 60%, 0.5) !important;
+// }
+
 body {
 	margin: 0;
 	padding: 0.01px;
@@ -447,6 +451,10 @@ a.documentLink.fancyLink {
 	}
 	&.right {
 		float: right;
+	}
+
+	@media (max-width: 60rem) {
+		margin: var(--gapPair) auto;
 	}
 }
 
